Change package name

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "mcmis/support",
-    "description": "The support package for MCMIS",
-    "type": "mcmis-plugin",
+    "name": "mcmis/template",
+    "description": "The template package for MCMIS",
+    "type": "mcmis-template",
     "license": "MIT",
     "authors": [
         {
@@ -20,7 +20,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.8.x-dev"
+            "dev-master": "1.0.x-dev"
         }
     }
 }
